--- a/Project2/View/Storyboard/Base.lproj/Main.storyboard
+++ b/Project2/View/Storyboard/Base.lproj/Main.storyboard
@@ -104,7 +104,7 @@
                             </scrollView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ic4-BR-cwQ">
                                 <rect key="frame" x="305" y="597" width="50" height="50"/>
-                                <color key="backgroundColor" red="0.91764705879999997" green="0.71649145989999996" blue="0.120028148" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="Jf1-PL-8f2"/>
                                     <constraint firstAttribute="width" constant="50" id="L0j-eF-m9h"/>
@@ -217,31 +217,89 @@
                                                 </fragment>
                                             </attributedString>
                                         </state>
+                                        <connections>
+                                            <action selector="fontButtonTapped:" destination="mFr-ri-311" eventType="touchUpInside" id="8eM-Dj-Nmd"/>
+                                        </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yHJ-M3-g6Z" customClass="ALCustomView" customModule="Project2" customModuleProvider="target">
                                         <rect key="frame" x="20" y="54" width="335" height="44"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YEZ-w7-1D9">
-                                                <rect key="frame" x="10" y="7" width="21" height="30"/>
+                                                <rect key="frame" x="10" y="8" width="28" height="28"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="30" id="d5X-yB-58N"/>
+                                                    <constraint firstAttribute="width" constant="28" id="1yi-ig-dfL"/>
+                                                    <constraint firstAttribute="height" constant="28" id="d5X-yB-58N"/>
                                                 </constraints>
                                                 <state key="normal" image="Icon_AlignCenter">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="alignmentButtonTapped:" destination="mFr-ri-311" eventType="touchUpInside" id="LfB-WK-Cd6"/>
+                                                </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="64J-AB-AX5">
-                                                <rect key="frame" x="75" y="7" width="30" height="36"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="64J-AB-AX5">
+                                                <rect key="frame" x="53" y="7" width="30" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="IG5-ze-CjN"/>
+                                                    <constraint firstAttribute="width" constant="30" id="rqm-w1-0mt"/>
+                                                </constraints>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
-                                                <state key="normal" title="B"/>
+                                                <state key="normal" title="B">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="boldButtonTapped:" destination="mFr-ri-311" eventType="touchUpInside" id="GHG-Wo-v5q"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Oyb-zP-bPa">
+                                                <rect key="frame" x="98" y="7" width="30" height="30"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue-BoldItalic" family="Helvetica Neue" pointSize="20"/>
+                                                <state key="normal" title="I">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="italicButtonTapped:" destination="mFr-ri-311" eventType="touchUpInside" id="et9-2c-Kty"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w0y-2d-Q2k">
+                                                <rect key="frame" x="143" y="7" width="30" height="30"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
+                                                <state key="normal" title="Aa">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="letterCaseBtnTapped:" destination="mFr-ri-311" eventType="touchUpInside" id="Ecy-KX-GLa"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JI7-pY-s7r">
+                                                <rect key="frame" x="188" y="5.5" width="137" height="33"/>
+                                                <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="18"/>
+                                                <state key="normal" title="Spacing">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="spacingBtnTapped:" destination="mFr-ri-311" eventType="touchUpInside" id="Sii-OM-9P7"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" red="0.43529411759999997" green="0.47843137250000001" blue="0.46666666670000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
+                                            <constraint firstItem="w0y-2d-Q2k" firstAttribute="height" secondItem="Oyb-zP-bPa" secondAttribute="height" id="6RF-Qa-7TV"/>
+                                            <constraint firstItem="Oyb-zP-bPa" firstAttribute="centerY" secondItem="64J-AB-AX5" secondAttribute="centerY" id="6lP-jt-72z"/>
                                             <constraint firstItem="YEZ-w7-1D9" firstAttribute="leading" secondItem="yHJ-M3-g6Z" secondAttribute="leading" constant="10" id="8YR-tk-RDq"/>
+                                            <constraint firstItem="JI7-pY-s7r" firstAttribute="centerY" secondItem="w0y-2d-Q2k" secondAttribute="centerY" id="92o-CY-zoc"/>
+                                            <constraint firstItem="w0y-2d-Q2k" firstAttribute="width" secondItem="Oyb-zP-bPa" secondAttribute="width" id="CXH-2r-FWp"/>
+                                            <constraint firstItem="Oyb-zP-bPa" firstAttribute="width" secondItem="64J-AB-AX5" secondAttribute="width" id="LNQ-Dz-Dr7"/>
+                                            <constraint firstAttribute="trailing" secondItem="JI7-pY-s7r" secondAttribute="trailing" constant="10" id="PS2-St-yFe"/>
+                                            <constraint firstItem="w0y-2d-Q2k" firstAttribute="leading" secondItem="Oyb-zP-bPa" secondAttribute="trailing" constant="15" id="PYY-6Z-cib"/>
+                                            <constraint firstItem="64J-AB-AX5" firstAttribute="centerY" secondItem="YEZ-w7-1D9" secondAttribute="centerY" id="SME-mQ-jK5"/>
                                             <constraint firstItem="YEZ-w7-1D9" firstAttribute="centerY" secondItem="yHJ-M3-g6Z" secondAttribute="centerY" id="VLm-KK-VUe"/>
+                                            <constraint firstItem="Oyb-zP-bPa" firstAttribute="height" secondItem="64J-AB-AX5" secondAttribute="height" id="WSs-64-VnM"/>
                                             <constraint firstAttribute="height" constant="44" id="YJN-h6-5ww"/>
+                                            <constraint firstItem="Oyb-zP-bPa" firstAttribute="leading" secondItem="64J-AB-AX5" secondAttribute="trailing" constant="15" id="bZO-HW-54N"/>
+                                            <constraint firstItem="w0y-2d-Q2k" firstAttribute="centerY" secondItem="Oyb-zP-bPa" secondAttribute="centerY" id="cIj-To-Auf"/>
+                                            <constraint firstItem="64J-AB-AX5" firstAttribute="leading" secondItem="YEZ-w7-1D9" secondAttribute="trailing" constant="15" id="tdV-4i-xTm"/>
+                                            <constraint firstItem="JI7-pY-s7r" firstAttribute="leading" secondItem="w0y-2d-Q2k" secondAttribute="trailing" constant="15" id="w7H-mC-yWg"/>
                                         </constraints>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -252,6 +310,9 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S9l-L7-B0S">
                                         <rect key="frame" x="260" y="2" width="40" height="40"/>
                                         <color key="backgroundColor" red="1" green="0.57810515169999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <connections>
+                                            <action selector="colorButtonTapped:" destination="mFr-ri-311" eventType="touchUpInside" id="eJj-Ix-OiN"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vtx-GG-yF4">
                                         <rect key="frame" x="315" y="2" width="40" height="40"/>
@@ -263,6 +324,9 @@
                                         <state key="normal" title="30">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="fontSizeButtonTapped:" destination="mFr-ri-311" eventType="touchUpInside" id="frp-Om-PeX"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fwj-X3-mH3">
                                         <rect key="frame" x="80" y="9" width="26" height="26"/>
@@ -308,7 +372,9 @@
                         <viewLayoutGuide key="safeArea" id="Va0-bd-i16"/>
                     </view>
                     <connections>
+                        <outlet property="alignmentButton" destination="YEZ-w7-1D9" id="wCA-YW-Usw"/>
                         <outlet property="designView" destination="G2c-KZ-Yq1" id="Bz7-jI-hKY"/>
+                        <outlet property="letterCaseButton" destination="w0y-2d-Q2k" id="iXK-ov-pAx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="o7i-A8-mCb" userLabel="First Responder" sceneMemberID="firstResponder"/>
