--- a/Project2/View/Storyboard/Base.lproj/Main.storyboard
+++ b/Project2/View/Storyboard/Base.lproj/Main.storyboard
@@ -122,7 +122,7 @@
                                     <constraint firstAttribute="height" constant="128" id="qcv-pL-1rn"/>
                                 </constraints>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="doneAccessory" value="YES"/>
@@ -193,6 +193,7 @@
                                     <constraint firstAttribute="height" constant="50" id="gIU-ww-7eA"/>
                                     <constraint firstAttribute="width" constant="50" id="i24-Wt-jbV"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <state key="normal" image="Icon_Plus"/>
                                 <connections>
                                     <action selector="addBtnTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="G05-r8-MHg"/>
@@ -355,25 +356,65 @@
                                     <constraint firstItem="vtx-GG-yF4" firstAttribute="centerY" secondItem="S9l-L7-B0S" secondAttribute="centerY" id="qXy-Ev-s4b"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sHk-BO-mXn">
+                                <rect key="frame" x="0.0" y="489" width="375" height="178"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hlx-JU-8Ak">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="132"/>
+                                        <color key="backgroundColor" red="0.87450980389999999" green="0.85882352939999995" blue="0.81960784310000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </tableView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xm2-GP-7kp">
+                                        <rect key="frame" x="20" y="140" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="hKn-4h-cNj"/>
+                                            <constraint firstAttribute="width" secondItem="xm2-GP-7kp" secondAttribute="height" multiplier="1:1" id="rZ8-8G-QuO"/>
+                                        </constraints>
+                                        <state key="normal" image="noun_Cancel"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QRY-6u-QQf">
+                                        <rect key="frame" x="325" y="140" width="30" height="30"/>
+                                        <state key="normal" title="Button" image="noun_Check"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="xm2-GP-7kp" firstAttribute="leading" secondItem="sHk-BO-mXn" secondAttribute="leading" constant="20" id="GfR-c7-H2q"/>
+                                    <constraint firstAttribute="trailing" secondItem="hlx-JU-8Ak" secondAttribute="trailing" id="Ha0-DJ-iL3"/>
+                                    <constraint firstItem="hlx-JU-8Ak" firstAttribute="top" secondItem="sHk-BO-mXn" secondAttribute="top" id="IlF-rf-G3Z"/>
+                                    <constraint firstItem="QRY-6u-QQf" firstAttribute="width" secondItem="xm2-GP-7kp" secondAttribute="width" id="SWF-BS-9J3"/>
+                                    <constraint firstAttribute="bottom" secondItem="QRY-6u-QQf" secondAttribute="bottom" constant="8" id="UKX-e6-J3m"/>
+                                    <constraint firstItem="xm2-GP-7kp" firstAttribute="top" secondItem="hlx-JU-8Ak" secondAttribute="bottom" constant="8" id="VDI-aI-fKM"/>
+                                    <constraint firstItem="hlx-JU-8Ak" firstAttribute="leading" secondItem="sHk-BO-mXn" secondAttribute="leading" id="YuK-lM-7ez"/>
+                                    <constraint firstItem="QRY-6u-QQf" firstAttribute="top" secondItem="hlx-JU-8Ak" secondAttribute="bottom" constant="8" id="bEi-RX-kIM"/>
+                                    <constraint firstAttribute="trailing" secondItem="QRY-6u-QQf" secondAttribute="trailing" constant="20" id="egG-xf-xQl"/>
+                                    <constraint firstAttribute="bottom" secondItem="xm2-GP-7kp" secondAttribute="bottom" constant="8" id="rRQ-Vm-3SE"/>
+                                    <constraint firstItem="QRY-6u-QQf" firstAttribute="width" secondItem="xm2-GP-7kp" secondAttribute="height" multiplier="1:1" id="t9T-uC-dUG"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.87450980389999999" green="0.85882352939999995" blue="0.81960784310000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="G2c-KZ-Yq1" firstAttribute="leading" secondItem="Va0-bd-i16" secondAttribute="leading" constant="20" id="5xP-X9-eiw"/>
                             <constraint firstItem="ZBA-2a-ivG" firstAttribute="trailing" secondItem="Va0-bd-i16" secondAttribute="trailing" constant="-20" id="B7f-Vx-aOc"/>
+                            <constraint firstItem="sHk-BO-mXn" firstAttribute="leading" secondItem="Yke-94-yj6" secondAttribute="leading" id="E0A-j4-mso"/>
                             <constraint firstItem="G2c-KZ-Yq1" firstAttribute="centerX" secondItem="5m0-ak-QCl" secondAttribute="centerX" id="H2o-1X-Ok3"/>
+                            <constraint firstItem="sHk-BO-mXn" firstAttribute="trailing" secondItem="Yke-94-yj6" secondAttribute="trailing" id="KLG-2o-qWT"/>
                             <constraint firstItem="Yke-94-yj6" firstAttribute="trailing" secondItem="Va0-bd-i16" secondAttribute="trailing" id="LlE-Rp-kNO"/>
                             <constraint firstItem="Yke-94-yj6" firstAttribute="top" secondItem="G2c-KZ-Yq1" secondAttribute="bottom" priority="999" constant="40" id="MNl-ID-2q5"/>
                             <constraint firstItem="Yke-94-yj6" firstAttribute="leading" secondItem="Va0-bd-i16" secondAttribute="leading" id="TNJ-uB-No6"/>
                             <constraint firstItem="ZBA-2a-ivG" firstAttribute="top" secondItem="yHJ-M3-g6Z" secondAttribute="bottom" constant="10" id="Vy9-sI-upC"/>
+                            <constraint firstItem="sHk-BO-mXn" firstAttribute="bottom" secondItem="Yke-94-yj6" secondAttribute="bottom" id="bkf-mU-b3s"/>
                             <constraint firstItem="Yke-94-yj6" firstAttribute="bottom" secondItem="Va0-bd-i16" secondAttribute="bottom" id="dQw-sA-LVx"/>
                             <constraint firstItem="Va0-bd-i16" firstAttribute="bottom" secondItem="ZBA-2a-ivG" secondAttribute="bottom" constant="20" id="fnL-cF-rJ1"/>
                             <constraint firstItem="G2c-KZ-Yq1" firstAttribute="top" secondItem="Va0-bd-i16" secondAttribute="top" constant="10" id="kaV-SG-wd6"/>
+                            <constraint firstItem="sHk-BO-mXn" firstAttribute="top" secondItem="Yke-94-yj6" secondAttribute="top" id="lr1-Yy-R9f"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Va0-bd-i16"/>
                     </view>
                     <connections>
                         <outlet property="alignmentButton" destination="YEZ-w7-1D9" id="wCA-YW-Usw"/>
                         <outlet property="designView" destination="G2c-KZ-Yq1" id="Bz7-jI-hKY"/>
+                        <outlet property="fontTableView" destination="hlx-JU-8Ak" id="gXA-I8-eLn"/>
                         <outlet property="letterCaseButton" destination="w0y-2d-Q2k" id="iXK-ov-pAx"/>
                     </connections>
                 </viewController>
@@ -502,5 +543,7 @@
         <image name="Icon_shape" width="208" height="206"/>
         <image name="Icon_sortDown" width="10" height="10"/>
         <image name="Icon_text" width="173" height="173"/>
+        <image name="noun_Cancel" width="21" height="21"/>
+        <image name="noun_Check" width="21" height="21"/>
     </resources>
 </document>
